# Linux-Strike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kisak-strike-build-options.cmake
.github/workflows/: kstrike-compile.yml
cmake/: detect_platform.cmake  platform_dirs.cmake
dedicated/: CMakeLists.txt  sys_linux.cpp
engine/: baseclientstate.cpp  net_steamsocketmgr.cpp
engine/generated_proto/: engine_gcmessages.pb.h
engine/voice_codecs/minimp3/: CMakeLists.txt  minimp3.h  vaudio_minimp3.cpp  vaudio_minimp3.vpc
game/client/: hltvcamera.cpp  ragdoll.cpp
game/client/cstrike15/: c_cs_player.cpp
game/client/generated_proto/: cstrike15_gcmessages.pb.h  cstrike15_usermessages.pb.cc  cstrike15_usermessages.pb.h  engine_gcmessages.pb.cc  netmessages.pb.h  steammessages.pb.cc  steammessages.pb.h
game/client/portal2/gameui/: gameconsole.cpp
game/server/cstrike15/: cs_player.cpp
game/server/cstrike15/bot/: cs_bot_vision.cpp
game/server/generated_proto/: base_gcmessages.pb.cc  base_gcmessages.pb.h  cstrike15_gcmessages.pb.cc  netmessages.pb.cc
game/shared/: cs_gamerules.h  cs_workshop_manager.cpp
game/shared/cstrike15/: cs_gamerules.cpp  cs_gamerules.h  cs_weapon_parse.cpp  cs_weapon_parse.h  weapon_molotov.cpp
game/shared/econ/: cs_weapon_parse.cpp  cs_weapon_parse.h
ivp/: README.md
ivp/havana/havok/hk_base/: base.h  base_types.h
ivp/havana/havok/hk_base/array/: pre_allocated_array.h
ivp/havana/havok/hk_math/: CMakeLists.txt  base_math.h  interval.h  math.inl  matrix3.h  matrix3.inl
ivp/havana/havok/hk_math/vector3/: vector3.h  vector3.inl
ivp/havana/havok/hk_math/vector_fpu/: vector_fpu.h  vector_fpu.inl
ivp/havana/havok/hk_physics/constraint/: CMakeLists.txt
ivp/havana/havok/hk_physics/constraint/local_constraint_system/: local_constraint_system.cpp
ivp/havana/havok/hk_physics/constraint/ragdoll/: ragdoll_constraint.cpp  ragdoll_constraint_bp_builder.cpp
ivp/havana/havok/hk_physics/constraint/util/: constraint_limit_util.h
ivp/ivp_collision/: ivp_mindist_recursive.cxx
ivp/ivp_controller/: ivp_car_system.cxx
ivp/ivp_intern/: ivp_environment.cxx  ivp_great_matrix.cxx
ivp/ivp_physics/: CMakeLists.txt
ivp/ivp_utility/: ivu_memory.hxx
launcher/: CMakeLists.txt  launcher.cpp
precompiled/: README.md
public/sfmobjects/: loggraph.h
public/tier0/: dbgflag.h
responserules/runtime/: criteriaset.cpp
rocketui/: CMakeLists.txt
videocfg/: videocfg.cpp
vphysics/: CMakeLists.txt
